--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
       return bandName.replace(/^(a |the |an )/i, '').trim();
     }
 
-    const sortedBands = bands.sort(function (a, b) {
-      if (a > b) {
-        return 1;
-      } else {
-        return -1;
-      }
-    });
+    const sortedBands = bands.sort((a, b) => strip(a) > strip(b) ? 1 : -1);
 
     console.log(sortedBands);
 
